--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,12 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc compilar archivo activo",
+            "label": "make",
             "command": "/usr/bin/make",
             "args": [
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${workspaceRoot}"
             },
             "problemMatcher": [
                 "$gcc"
